# ScheduleI

./: analysis.py  evalAgent.py  expectimax.py  gamble.py  gymEnv.py  main.py  pyproject.toml  rideTheBus.py
agents/: __init__.py  baseAgent.py  handAgent.py  statsAgent.py
crafting/: data.json  graph.html  update.py  visualize.py
