[project]
name = "schedulei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pyct>=0.5.0",
    "simplejson>=3.20.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
